--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- barra superior -->
     <header>
         <div id="margintop">
-            <a href="index.html"><img src="imagens/cisco.png" class="tamanho" alt="Eu" id="logo"></a>
+            <a href="index.html"><img src="Imagens/MythikBranco.png" class="tamanho" alt="Eu" id="logo"></a>
         </div>
 
         <ul class="btnsnav " id="margintopbtns">
@@ -114,3 +114,4 @@
 
 
 </html>
+
